--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/R.I.M. UI Shell/v15/Server/sqlite3
+/R.I.M. UI Shell/obj/Debug
+/.vs/R.I.M. UI Shell/v15
